[package]
name = "kalman-fusion"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/tstellanova/kalman-fusion"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
license = "BSD-3-Clause"
keywords = ["no-std", "kalman", "filter" ]
description = "Simple single-variable Kalman filtering for Float and Fixed types"
readme = "README.md"


[dependencies]
num-traits = "0.2.17"
fixed = "1.24.0"

[dev-dependencies]
chrono = "0.4.31"
rand_distr = "0.4.3"
rand = "0.8.5"

